8 October 2020: Wouter
	- Tag for 1.12.0 release.
	- Current repo is version 1.12.1 in development.
	- Fix #319: potential memory leak on config failure, in rpz config.

1 October 2020: Wouter
	- Current repo is version 1.12.0 for release.  Tag for 1.12.0rc1.

30 September 2020: Wouter
	- Fix doh tests when not compiled in.
	- Add dohclient test executable to gitignore.
	- Fix stream_ssl, ssl_req_order and ssl_req_timeout tests for
	  alloc check debug output.
	- Easier kill of unbound-dnstap-socket tool in test.
	- Fix memory leak of edns tags at libunbound context delete.
	- Fix double loopexit for unbound-dnstap-socket after sigterm.

29 September 2020: Ralph
	- DNS Flag Day 2020: change edns-buffer-size default to 1232.

28 September 2020: Wouter
	- Fix unit test for dnstap changes, so that it waits for the timer.

23 September 2020: Wouter
	- Fix #305: dnstap logging significantly affects unbound performance
	  (regression in 1.11).
	- Fix #305: only wake up thread when threshold reached.
	- Fix to ifdef fptr wlist item for dnstap.

23 September 2020: Ralph
	- Fix edns-client-tags get_option typo
	- Add edns-client-tag-opcode option
	- Use inclusive language in configuration

21 September 2020: Ralph
	- Fix #304: dnstap logging not recovering after dnstap process restarts

21 September 2020: Wouter
	- Merge PR #311 by luismerino: Dynlibmod leak.
	- Error message is logged for dynlibmod malloc failures.
	- iana portlist updated.

18 September 2020: Wouter
	- Fix that prefer-ip4 and prefer-ip6 can be get and set with
	  unbound-control, with libunbound and the unbound-checkconf option
	  output function.
	- iana portlist updated.

15 September 2020: George
	- Introduce test for statistics.

15 September 2020: Wouter
	- Spelling fix.

11 September 2020: Wouter
	- Remove x file mode on ipset/ipset.c and h files.

9 September 2020: Wouter
	- Fix num.expired statistics output.

31 August 2020: Wouter